--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "framer-motion": "^11.3.8",
+    "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
